# pacemaker

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.mk
docs/: grammar.ebnf
include/pacemaker/: const.hpp  jack.hpp  pacemaker.hpp  sequencer.hpp  util.hpp
src/: pacemaker.cpp
